--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "private": "true",
   "devDependencies": {
     "@rollup/plugin-typescript": "^5.0.2",
+    "@types/react-native": "^0.63.15",
     "rollup": "^2.26.5",
     "tslib": "^2.0.1",
-    "typescript": "^4.0.2",
-    "react-native": "^0.63.2"
+    "typescript": "^4.0.2"
   },
   "nativePackage": true,
   "scripts": {
