--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,7 +38,7 @@ android {
     buildToolsVersion safeExtGet('buildToolsVersion', '28.0.3')
 
     defaultConfig {
-        minSdkVersion safeExtGet('minSdkVersion', 16)
+        minSdkVersion safeExtGet('minSdkVersion', 22)
         targetSdkVersion safeExtGet('targetSdkVersion', 28)
     }
 
@@ -62,6 +62,6 @@ repositories {
 dependencies {
     implementation 'com.facebook.react:react-native:+'  // From node_modules
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
-    implementation 'com.github.licheedev.Android-SerialPort-API:serialport:1.0.1'
-    implementation 'org.droidplanner.android:usb-serial-android:0.1.0'
+    implementation 'com.licheedev:android-serialport:2.1.1'
+    implementation 'com.github.mik3y:usb-serial-for-android:3.0.1'
 }
