--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "module": "es6",
-        "target": "es6",
+        "module": "ESNext",
+        "target": "ESNext",
         "noImplicitAny": false,
         "rootDir": "./src",
         "sourceMap": false,
